Add gameboard layout and buttons layout

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             <div class="cell"></div>
             <div class="cell"></div>
         </div>
+        <div class="btns">
+            <button class="new-game-btn">New game</button>
+            <button class="new-round-btn">New round</button>
+        </div>
     </div>
     <dialog>
         <form>
