Add dialog layout

--- a/index.html
+++ b/index.html
@@ -36,17 +36,19 @@
         </div>
     </div>
     <dialog>
+        <button class="close-btn">X</button>
+        <h2>Add players</h2>
         <form>
-            <div class="form-row">
-                <label for="player1-name">player1 name</label>
+            <div class="form-control">
+                <label for="player1-name">First player name</label>
                 <input type="text" name="player1Name" id="player1-name">
             </div>
-            <div class="form-row">
-                <label for="player2-name">player2-name</label>
-                <input type="text" name="player2Name" id="player2-name">
+            <div class="form-control">
+                <label for="player2-name">Second player name</label>
+                <input type="text" name="player2Name" id="player2 name">
             </div>
-            <div class="form-row">
-                <button>Submit</button>
+            <div class="form-control">
+                <button class="submit-btn">Submit</button>
             </div>
         </form>
     </dialog>
