Add displayController module & edit gameFlow

--- a/index.html
+++ b/index.html
@@ -9,31 +9,6 @@
 </head>
 <body>
     <div class="container">
-        <div class="results-board">
-            <div class="player">
-                <h2 class="name">player1</h2>
-                <span class="score">0</span>
-            </div>
-            <div class="player">
-                <h2 class="name">player2</h2>
-                <span class="score">0</span>
-            </div>
-        </div>
-        <div class="game-board">
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-        </div>
-        <div class="btns">
-            <button class="new-game-btn">New game</button>
-            <button class="new-round-btn">New round</button>
-        </div>
     </div>
     <dialog>
         <button class="close-btn">X</button>
@@ -45,7 +20,7 @@
             </div>
             <div class="form-control">
                 <label for="player2-name">Second player name</label>
-                <input type="text" name="player2Name" id="player2 name">
+                <input type="text" name="player2Name" id="player2-name">
             </div>
             <div class="form-control">
                 <button class="submit-btn">Submit</button>
