Edit gameFlow module & add some styles
Change startRound method name to play.

In play method instead of taking user input from the prompt and entering
an infinit loop, the function will be fired when the cell is clicked and
take input form cell data properties.

Add some styles to cell content.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div class="container">
+        <div class="results-board"></div>
+        <div class="game-board"></div>
+        <div class="btns"></div>
     </div>
     <dialog>
         <button class="close-btn">X</button>
