Fix indentation & do some code refactoring

--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
         <div class="btns"></div>
     </div>
     <dialog>
-        <button class="close-btn">X</button>
         <h2>Add players</h2>
         <form>
             <div class="form-control">
-                <label for="player1-name">First player name</label>
+                <label for="player1-name">First player name (X)</label>
                 <input type="text" name="player1Name" id="player1-name">
             </div>
             <div class="form-control">
-                <label for="player2-name">Second player name</label>
+                <label for="player2-name">Second player name (O)</label>
                 <input type="text" name="player2Name" id="player2-name">
             </div>
             <div class="form-control">
